jack: don't wait for callbacks if the jack server shut down

Otherwise we'll wait forever.

https://bugzilla.gnome.org/show_bug.cgi?id=747275